refactor: replace use of deprecated number constructors.